syntax = "proto3";

package user;
option go_package = "github.com/hailsayan/achilles/proto/user;userpb";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse) {}
}

message CreateUserRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string sort_by = 3;
  bool sort_desc = 4;
}

message GetUsersResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message UpdateUserRequest {
  string user_id = 1;
  optional string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}